Fix missing Rust issue

--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,8 @@
 {
     "build": {
       "env": {
-        "PYTHON_VERSION": "3.10"
+        "PYTHON_VERSION": "3.10",
+        "PATH": "/root/.cargo/bin:$PATH"
       }
     }
   }
