--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,7 @@
 {
-    "build": {
-      "env": {
-        "PYTHON_VERSION": "3.10",
-        "PATH": "/root/.cargo/bin:$PATH"
-      }
+    "buildCommand": "bash build.sh",
+    "env": {
+      "PYTHON_VERSION": "3.10"
     }
   }
   
